# CPP_S6.824

./: .gitignore  CMakeLists.txt  README  README.md  build.sh  test-mr.sh
MapReduce/: CMakeLists.txt  crash.cpp  demo.txt  master.cpp  mtiming.cpp  mtiming.h  nocrash.cpp  rpc_service.cpp  rpc_service.h  rtiming.cpp  rtiming.h  wc.cpp  wc.h  worker.cpp
main/: CMakeLists.txt  mrsequential.cpp
raft/: CMakeLists.txt  common.h  persister.h  raft.cpp  raft.h  test.cpp
